unpackaged/main/default/objects/Classification_TypeClient__c/Classification_TypeClient__c.object-meta.xml
<CustomObject>
    <description>Table référentielle pour la classification du compte client.</description>
    <label>Classification - Type Client</label>
    <nameField>
        <label>Nom de Classification_TypeClient</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classification - Type Client</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>