unpackaged/main/default/objects/Classification_TypeClient__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Classification_TypeClient</valueSetName>
    </valueSet>
</CustomField>