unpackaged/main/default/objects/Classification_TypeClient__c/fields/Pays_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Pays_Facturation__c</fullName>
    <label>Pays (Facturation)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liste_Pays</valueSetName>
    </valueSet>
</CustomField>