unpackaged/main/default/objects/Classification_TypeClient__c/fields/Risque_Strategique__c.field-meta.xml
<CustomField>
    <fullName>Risque_Strategique__c</fullName>
    <label>Risque Stratégique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risque_Strategique</valueSetName>
    </valueSet>
</CustomField>