unpackaged/main/default/objects/Classification_TypeClient__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Structure__c</columns>
    <columns>Risque_Strategique__c</columns>
    <columns>Tranche_de_CA__c</columns>
    <columns>Classification__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>